// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaxonomyDropdown rendering render TaxonomyDropdown 1`] = `
<NavItem
  activeHref=""
  activeKey=""
  className="dropdown org-switcher"
  id="organization-dropdown"
>
  <a
    className="dropdown-toggle nav-item-iconic"
    data-toggle="dropdown"
    href="#"
  >
    org1
    <span
      className="caret"
    />
  </a>
  <ul
    className="dropdown-menu"
  >
    <li
      className="dropdown-header"
    >
      organization
    </li>
    <li>
      <a
        className="organizations_clear"
        href="/organizations/clear"
        onClick={[Function]}
      >
        Any Organization
      </a>
    </li>
    <li>
      <a
        className="organization"
        href="/organizations"
      >
        Manage Organizations
      </a>
    </li>
    <li
      className="divider"
    />
    <li
      key="0"
    >
      <a
        className="organization_menuitem"
        href="/organizations/1-org1/select"
        id="select_taxonomy_org1"
        onClick={[Function]}
      >
        org1
      </a>
    </li>
    <li
      key="1"
    >
      <a
        className="organization_menuitem"
        href="/organizations/2-org2/select"
        id="select_taxonomy_org2"
        onClick={[Function]}
      >
        org2
      </a>
    </li>
  </ul>
</NavItem>
`;

exports[`TaxonomyDropdown rendering render TaxonomyDropdownWithSearch 1`] = `
<NavItem
  activeHref=""
  activeKey=""
  className="dropdown org-switcher"
  id="organization-dropdown"
>
  <a
    className="dropdown-toggle nav-item-iconic"
    data-toggle="dropdown"
    href="#"
  >
    org1
    <span
      className="caret"
    />
  </a>
  <ul
    className="dropdown-menu"
  >
    <li
      className="dropdown-header"
    >
      organization
    </li>
    <li>
      <a
        className="organizations_clear"
        href="/organizations/clear"
        onClick={[Function]}
      >
        Any Organization
      </a>
    </li>
    <li>
      <a
        className="organization"
        href="/organizations"
      >
        Manage Organizations
      </a>
    </li>
    <li
      className="divider"
    />
    <li>
      <input
        className="form-control taxonomy_search"
        id="search_taxonomy_organization"
        onChange={[Function]}
        placeholder="Filter ..."
        type="text"
      />
    </li>
    <li
      key="0"
    >
      <a
        className="organization_menuitem"
        href="/organizations/1-org1/select"
        id="select_taxonomy_org1"
        onClick={[Function]}
      >
        org1
      </a>
    </li>
    <li
      key="1"
    >
      <a
        className="organization_menuitem"
        href="/organizations/2-org2/select"
        id="select_taxonomy_org2"
        onClick={[Function]}
      >
        org2
      </a>
    </li>
    <li
      key="2"
    >
      <a
        className="organization_menuitem"
        href="/organizations/3-org3/select"
        id="select_taxonomy_org3"
        onClick={[Function]}
      >
        org3
      </a>
    </li>
    <li
      key="3"
    >
      <a
        className="organization_menuitem"
        href="/organizations/4-org4/select"
        id="select_taxonomy_org4"
        onClick={[Function]}
      >
        org4
      </a>
    </li>
    <li
      key="4"
    >
      <a
        className="organization_menuitem"
        href="/organizations/5-org5/select"
        id="select_taxonomy_org5"
        onClick={[Function]}
      >
        org5
      </a>
    </li>
    <li
      key="5"
    >
      <a
        className="organization_menuitem"
        href="/organizations/6-org6/select"
        id="select_taxonomy_org6"
        onClick={[Function]}
      >
        org6
      </a>
    </li>
    <li
      key="6"
    >
      <a
        className="organization_menuitem"
        href="/organizations/7-org7/select"
        id="select_taxonomy_org7"
        onClick={[Function]}
      >
        org7
      </a>
    </li>
  </ul>
</NavItem>
`;
